  returned from any database call
- Add -retry-delay flag to driver3 to adjust the delay between
- Remove lingering hard coded fontconfig path from AppImage
- Fix check for existing database in pgsql-create-db
- Use CREATE DATABASE SQL statement instead of createdb binary in
  pgsql-create-db
- Use VACUUM SQL statement insetead of vacuumdb binary in pgsql-build-db

v0.53.10 (2024-02-22)

- Fix pgsql-load-db to not start multiple processes for single partition data
  loading, which weren't doing anything
- Parallelize some of the plotting in the generate-report and pgsql-report
  scripts
- psql: run TRUNCATE and COPY within a transaction if data is not partitioned
- Use linuxdeploy to create AppImage
- Build gnuplot explicitly disabling unnecessary options for AppImage
- Now only installing psql into AppImage
- Install touchstone-tools v0.7.3 into AppImage
- Remove `activate` script in favor of just executing AppRun
- Fix pgsql-load-stored-procs to install from AppImage by default when run from
  the AppImage
- PostgreSQL load scripts are now BDR aware

v0.53.9 (2024-02-07)

- Fix pgsql-create-db logic for checking if the database already exists
v0.53.8 (2024-01-08)

- Fix test for touchstone tools in "run" script

v0.53.7 (2023-09-29)

- Remove dated psql scripts
- psql: Do not attempt to create database if it already exists, so that errors
  due to a lack of permissions to create database can be effectively trapped
- Add --tablespaces option to dbt2-build script to specify where tablespace
  devices are mounted or symlinked
- Fix handling of tablespace flag for creating tables when using
  dbt2-pgsql-build-db

v0.53.6 (2023-09-04)

- driver3 now processes -L flag to limit number of connections by limited the
  number of processes forked
- pgsql-build-db: fix execution of pgsql-load-db and pgsql-create-index so
  that parameters are handled correctly when the -l argument is not used

v0.53.5 (2023-08-25)
