@@ -98,6 +98,11 @@ add_custom_target(appimage-podman
             --appdir AppDir
             --custom-apprun=${CMAKE_BINARY_DIR}/AppRun
             --desktop-file=${APPIMAGE_SOURCE_DIR}/dbt2.desktop
+            --executable=/usr/bin/perl
+            --executable=/usr/bin/psql
+            --executable=/usr/bin/python3.11
+            --executable=/usr/local/bin/gnuplot
+            --executable=/usr/local/bin/sqlite3
             --icon-file=${APPIMAGE_SOURCE_DIR}/dbt2.svg
             --output appimage
 )
