@@ -14,6 +14,7 @@ appimage:
 	cd builds/appimage/src && sed -i -e 's#/usr#././#g' dbt2-driver3
 	cd builds/appimage/src && sed -i -e 's#/usr#././#g' dbt2-rand
 	cd builds/appimage/src && sed -i -e 's#/usr#././#g' dbt2-transaction-test
+	cd builds/appimage/src && sed -i -e 's#/usr#././#g' dbt2-transaction-test
 	cd builds/appimage && make -s install DESTDIR=AppDir
 	cd builds/appimage && make -s appimage-podman
 
